--- a/src/app/components/checkout/checkout.component.html
+++ b/src/app/components/checkout/checkout.component.html
@@ -3,7 +3,6 @@
   size="large"
   color="orange"
   type="ball-clip-rotate-pulse"
-  [fullScreen]="false"
 >
   <p style="font-size: 20px; color: black">Booking Order...</p>
 </ngx-spinner>
@@ -121,7 +120,7 @@
         <div class="order-products">
           <div class="order-col" *ngFor="let c of cartData!.data;">
             <div>{{c.numInCart}}x {{c.product.name}}</div>
-            <div>{{(c.product.price*c.numInCart) | currency:'USD'}}</div>
+            <div>{{(c.product.price*c.numInCart)}}</div>
           </div>
         </div>
         <div class="order-col">
@@ -130,7 +129,7 @@
         </div>
         <div class="order-col dropdown-divider">
           <div><strong>TOTAL</strong></div>
-          <div><strong class="order-total">{{cartTotal | currency:'USD'}}</strong></div>
+          <div><strong class="order-total">{{cartTotal}}</strong></div>
         </div>
       </div>
       <div class="payment-method">
