--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,13 +4,13 @@
     <div id="top-header">
       <div class="container">
         <ul class="header-links pull-left">
-          <li><a href="#"><i class="fa fa-phone"></i> +021-95-51-84</a></li>
-          <li><a href="#"><i class="fa fa-envelope-o"></i> email&#64;email.com</a></li>
-          <li><a href="#"><i class="fa fa-map-marker"></i> 1734 Stonecoal Road</a></li>
+          <li><a href="#"><i class="fa fa-phone"></i> +123-45-56-78-9</a></li>
+          <li><a href="#"><i class="fa fa-envelope-o"></i> los4elefantes&#64;gmail.com</a></li>
+          <li><a href="#"><i class="fa fa-map-marker"></i> Pontificia Universidad Javeriana</a></li>
         </ul>
         <ul class="header-links pull-right">
-          <li><a href="#"><i class="fa fa-dollar"></i> USD</a></li>
-          <li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
+          <li><a href="#"><i class="fa fa-dollar"></i> COP</a></li>
+          <li><a [routerLink]="'/login'"><i class="fa fa-user-o"></i> Sign In</a></li>
         </ul>
       </div>
     </div>
@@ -123,10 +123,10 @@
       <div id="responsive-nav">
         <!-- NAV -->
         <ul class="main-nav nav py-3">
-          <li class="active"><a [routerLink]="/">Home</a></li>
-          <li><a [routerLink]="/">Categories</a></li>
-          <li><a [routerLink]="/">Games</a></li>
-          <li><a [routerLink]="/">Contact Us</a></li>
+          <li class="active"><a href="#">Home</a></li>
+          <li><a href="#">Categories</a></li>
+          <li><a href="#">Games</a></li>
+          <li><a href="#">Contact Us</a></li>
   
         </ul>
         <!-- /NAV -->
