--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -9,11 +9,11 @@
           <div class="col-md-3 col-xs-6">
             <div class="footer">
               <h3 class="footer-title">About Us</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut.</p>
+              <p>Software Arquitecture Project 2023</p>
               <ul class="footer-links">
-                <li><a href="#"><i class="fa fa-map-marker"></i>1734 Stonecoal Road</a></li>
-                <li><a href="#"><i class="fa fa-phone"></i>+021-95-51-84</a></li>
-                <li><a href="#"><i class="fa fa-envelope-o"></i>email&#64;email.com</a></li>
+                <li><a href="#"><i class="fa fa-map-marker"></i>Pontificia Universidad Javeriana</a></li>
+                <li><a href="#"><i class="fa fa-phone"></i>+123-45-78-9</a></li>
+                <li><a href="#"><i class="fa fa-envelope-o"></i>los4elefantes&#64;gmail.com</a></li>
               </ul>
             </div>
           </div>
@@ -81,7 +81,7 @@
             </ul>
             <span class="copyright">
                                   <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                                  Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved by Los 4 Elefantes
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                               </span>
           </div>
