--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -75,12 +75,12 @@
                 <img [src]="p.image" alt="{{p.name}}" width="200px" class="card-img-top" (click)="selectProduct(p.id)" style="cursor:pointer;">
                 <div class="card-header">
                   <div class="card-title">
-                    <p>{{p.name | titlecase}}</p>
+                    <p>{{p.name}}</p>
                   </div>
                 </div>
                 <div class="card-body">
                   <h6>{{p.description.substr(0, 40)}} ....</h6>
-                  <p class="lead">{{p.price | currency:'USD'}}</p>
+                  <p class="lead">{{p.price}}</p>
                 </div>
   
                 <div class="row d-flex justify-content-center border-primary my-3">
