--- a/src/app/components/cart/cart.component.html
+++ b/src/app/components/cart/cart.component.html
@@ -32,7 +32,7 @@
                   <div class="value-button" id="decrease" (click)="ChangeQuantity(i, false)">
                     <i class="fa fa-minus"></i>
                   </div>
-                  <input type="number" id="number" [value]="c.numInCart" readonly [max]="c.product.quantity" />
+                  <input type="number" id="number" [value]="c.numInCart" readonly [max]="c.product.amount" />
                   <div class="value-button" id="increase" (click)="ChangeQuantity(i, true)">
                     <i class="fa fa-plus"></i>
                   </div>
