--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -123,8 +123,8 @@
       <div id="responsive-nav">
         <!-- NAV -->
         <ul class="main-nav nav py-3">
-          <li class="active"><a href="#">Home</a></li>
-          <li><a href="#">Categories</a></li>
+          <li class="active"><a routerLink="/home">Home</a></li>
+          <li><a routerLink="/categories">Categories</a></li>
           <li><a href="#">Games</a></li>
           <li><a href="#">Contact Us</a></li>
   
