--- a/src/app/components/product/product.component.html
+++ b/src/app/components/product/product.component.html
@@ -6,8 +6,8 @@
     <div class="row">
       <div class="col-md-12">
         <ul class="breadcrumb-tree">
-          <li><a href="#">Home</a></li>
-          <li><a href="#">All Categories</a></li>
+          <li><a routerLink="/home">Home</a></li>
+          <li><a routerLink="/categories">All Categories</a></li>
           <li><a href="#">Accessories</a></li>
           <li><a href="#">{{product!.category}}</a></li>
           <li class="active">{{product!.name}}</li>
@@ -80,20 +80,20 @@
             <h3 class="product-price">{{product?.price}} </h3>
             <span class="product-available">In Stock</span>
           </div>
-          <p>{{product?.description}}</p>
+          <p>{{product?.name}}</p>
 
 
           <div class="add-to-cart">
             <div class="qty-label">
               Qty
               <div class="input-number">
-                <input #quantity [max]="product!.quantity" [min]="product!.quantity >= 1 ? product!.quantity : 0"
-                       readonly type="number" value="{{product!.quantity >= 1 ? 1 : 0}}">
+                <input #quantity [max]="product!.amount" [min]="product!.amount >= 1 ? product!.amount : 0"
+                       readonly type="number" value="{{product!.amount >= 1 ? 1 : 0}}">
                 <span (click)="Increase()" class="qty-up">+</span>
                 <span (click)="Decrease()" class="qty-down">-</span>
               </div>
             </div>
-            <button (click)="addToCart(product!.id)" *ngIf="product!.quantity >= 1" class="add-to-cart-btn"><i
+            <button (click)="addToCart(product!.id)" *ngIf="product!.amount >= 1" class="add-to-cart-btn"><i
               class="fa fa-shopping-cart"></i>Add To Cart
             </button>
           </div>
