--- a/src/app/components/products-by-category/products-by-category.component.html
+++ b/src/app/components/products-by-category/products-by-category.component.html
@@ -62,7 +62,7 @@
         <!-- section title -->
         <div class="col-md-12">
           <div class="section-title">
-            <h3 class="title">New Products</h3>
+            <h3 class="title">{{category}}</h3>
           </div>
         </div>
         <!-- /section title -->
@@ -79,8 +79,8 @@
                   </div>
                 </div>
                 <div class="card-body">
-                  <h6>Supplier: {{p.supplier}}</h6>
-                  <p class="lead">{{p.price | currency:'USD'}}</p>
+                  <h6>{{p.name.substr(0, 40)}} ....</h6>
+                  <p class="lead">{{p.price  | currency:'USD'}}</p>
                 </div>
   
                 <div class="row d-flex justify-content-center border-primary my-3">
